Refactor projects and add polymorphism examples
Removed `022_QueueLabolatory` project and replaced it with new projects demonstrating advanced C++ concepts.

- Added `029_Polimorphism` with examples of virtual functions, abstract classes, and polymorphism.
- Introduced `029_PolimorphismTask` to implement a polymorphism task with shapes and drawing operations.
- Added `030_STL` to demonstrate STL usage, including vector operations and iterators.
- Updated solution file to include new projects and configurations.
- Removed outdated `022_QueueLabolatory` references from solution and project files.

--- a/029_PolimorphismTask/029_PolimorphismTask.vcxproj.filters
+++ b/029_PolimorphismTask/029_PolimorphismTask.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="022_QueueLabolatory.cpp">
+    <ClCompile Include="029_PolimorphismTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
